--- a/index.html
+++ b/index.html
@@ -6,21 +6,65 @@
     <title>حساب مجموع الأرقام</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
             direction: rtl;
             text-align: right;
+            background-color: #000000; /* لون خلفية الصفحة (أسود) */
+            color: #ffffff; /* لون النص */
+            margin: 0;
+            padding: 0;
         }
         .container {
             max-width: 600px;
             margin: auto;
+            padding: 20px;
+            background-color: #333333; /* لون خلفية الحاوية */
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            margin-top: 20px;
+        }
+        h1 {
+            color: #ffffff; /* لون العنوان */
+            text-align: center;
+            margin-bottom: 20px;
         }
         textarea {
-            width: 100%;
+            width: calc(100% - 22px);
             height: 200px;
+            padding: 10px;
+            border: 1px solid #666666; /* لون حدود المربع النصي */
+            border-radius: 4px;
+            resize: vertical;
+            margin-bottom: 10px;
+            font-size: 16px;
+            line-height: 1.5;
+            background-color: #1f1f1f; /* لون خلفية المربع النصي */
+            color: #ffffff; /* لون النص داخل المربع النصي */
         }
         button {
             display: block;
-            margin: 10px 0;
+            width: 100%;
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        #result {
+            font-size: 18px;
+            text-align: center;
+            margin-top: 20px;
+            color: #ffffff; /* لون النص */
+        }
+        #total {
+            font-weight: bold;
+            color: #4CAF50; /* لون النص */
         }
     </style>
 </head>
@@ -44,9 +88,9 @@
 ١٤- حسن جبار ﷼✅
 ١٥-علي كرك ٥٠٠ريال واصله في جيب العريس
 ١٦موسي جبران ٤٠٠✅
-</textarea>
+        </textarea>
         <button onclick="calculateSum()">احسب المجموع</button>
-        <p id="result">مجموع القطه في القروب: <span id="total"></span> ريال</p>
+        <p id="result">مجموع القطع في القروب: <span id="total"></span> ريال</p>
     </div>
     <script>
         function calculateSum() {
