--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حساب مجموع الأرقام</title>
+    <title> حساب مجموع القطة</title>
     <style>
         body {
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -88,6 +88,7 @@
 ١٤- حسن جبار ﷼✅
 ١٥-علي كرك ٥٠٠ريال واصله في جيب العريس
 ١٦موسي جبران ٤٠٠✅
+ملاحظة حدد فقط اسماء ومبالغ اصحاب القطة فقط
         </textarea>
         <button onclick="calculateSum()">احسب المجموع</button>
         <p id="result">مجموع القطع في القروب: <span id="total"></span> ريال</p>
