--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 <body>
     <div class="container">
         <h1>حساب مجموع الأرقام</h1>
-        <textarea id="inputText">،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،
+        <textarea id="inputText">
+             ملاحظة حدد فقط اسماء ومبالغ اصحاب القطة فقط مثل هذه القائمة
+            وامسح هذه الرسالة  وبدلها بقائمة القاطين
+            ،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،،
 ١-مقبول غازي ١٥٠٠ريال✅
 ٢-منصور حسن ٣٠٠✅
 ٣-محمد يحي عمودي ٥٠٠✅
@@ -88,7 +91,6 @@
 ١٤- حسن جبار ﷼✅
 ١٥-علي كرك ٥٠٠ريال واصله في جيب العريس
 ١٦موسي جبران ٤٠٠✅
-ملاحظة حدد فقط اسماء ومبالغ اصحاب القطة فقط
         </textarea>
         <button onclick="calculateSum()">احسب المجموع</button>
         <p id="result">مجموع القطع في القروب: <span id="total"></span> ريال</p>
