--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             height: 200px; /* ارتفاع المربع النصي */
             overflow-y: auto; /* التمرير العمودي */
             cursor: text; /* تغيير شكل المؤشر عند التحريك إلى نص */
+            resize: vertical; /* السماح بتغيير حجم المربع النصي عموديا */
         }
         button {
             display: block;
@@ -72,13 +73,13 @@
 <body>
     <div class="container">
         <h1>حساب مجموع القطة</h1>
-        <pre onclick="clearPlaceholder()">اختر هذا النص لبدء الكتابة...</pre>
+        <pre id="inputText" contenteditable onclick="clearPlaceholder()">اختر هذا النص لبدء الكتابة...</pre>
         <button onclick="calculateSum()">احسب المجموع</button>
         <p id="result">مجموع القطع في القروب: <span id="total"></span> ريال</p>
     </div>
     <script>
         function calculateSum() {
-            const text = document.getElementsByTagName('pre')[0].textContent;
+            const text = document.getElementById('inputText').textContent;
             const arabicToEnglishNumbers = (str) => str.replace(/[\u0660-\u0669]/g, (d) => d.charCodeAt(0) - 1632).replace(/[\u06F0-\u06F9]/g, (d) => d.charCodeAt(0) - 1776);
             const convertedText = arabicToEnglishNumbers(text);
             const regex = /\d+/g;
@@ -89,8 +90,8 @@
         }
 
         function clearPlaceholder() {
-            const preElement = document.getElementsByTagName('pre')[0];
-            if (preElement.textContent === 'اختر هذا النص لبدء الكتابة...') {
+            const preElement = document.getElementById('inputText');
+            if (preElement.textContent ==='حدد فقط من القائمة اصحاب ومبالغ  االقطة للحساب والا سيكون هناك خطأ') {
                 preElement.textContent = '';
             }
         }
